added db anbindung und getters für eqcontracts
